Improved diction, layout, and visibility. Fixed mobile toggle for exiting nav.

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -126,7 +126,7 @@ body {
     line-height: 30px;
     font-weight: normal;
     font-family: "source_sans_proregular", sans-serif;
-    color: #838C95;
+    color: #333333;
 
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
